--- a/Trunk/EVEbot/changelog.txt
+++ b/Trunk/EVEbot/changelog.txt
@@ -1,5 +1,3 @@
-
-
  .______________________________________________________.
  |                   ___.           __                  |
  |   _______  __ ____\_ |__   _____/  |_                | 
@@ -7,7 +5,6 @@
  | \  ___/\   /\  ___/| \_\ (  <_> )  |                 |
  |  \___  >\_/  \___  >___  /\____/|__|                 |
  |      \/          \/    \/                            |
- |        --  V. 0.91 Stable Beta --                    |
  |                                                      |
  .------------------------------------------------------.
 
@@ -16,6 +13,8 @@
 *********************************************************
 
 Trunk
+
+0.92-Revision 55
 - UI Rewrite
 - Fixed crystal switching. Again. :) Works now!
 - Changed optimal range to be module.optimalrange -10% for a safety margin.
@@ -24,6 +23,12 @@ Trunk
 - Added fix from override for a situation where we'd think their were no asteroids left. in the universe.
 - Totally redid the config object, there are now module-specific config options, they handle their own default setting initialization, and provide wrapped access to the config options in the lavishsettings array
 - Added ORE_Volume list of hardcoded volumes for the various ore types.
+- Added Ship.IsCargoOpen
+- Added Staton.IsHangarOpen
+- Redid Ship/Station.OpenCargo/Hangar with new EVEWindow tlo
+- Fixed avg time per run calc
+- Fixed time this run calc to reset on undock
+- Added defines.iss, to store numeric defines.
 
 0.91
 - Fixed drones not being recalled in some cases
