--- a/Trunk/EVEbot/changelog.txt
+++ b/Trunk/EVEbot/changelog.txt
@@ -13,6 +13,7 @@
 *********************************************************
 
 Trunk
+- Added a check in the obj_Ship.iss file in the function WarpToID that if it didn't make it to the destintion in the first warp it warps again.
 
 0.92-Revision 58
 - UI Rewrite
