--- a/Trunk/EVEbot/changelog.txt
+++ b/Trunk/EVEbot/changelog.txt
@@ -14,6 +14,14 @@
 
 Trunk
 - A first pass at removing the bot logic from EVEBot.iss and pushing it into the bot classes.
+- Created UI:UpdateConsole to replace function UpdateHUdStatus
+- Moved more ui-related functions into the ui object
+- fixed miner not working after initial hauler object update.
+- Close all message and chat boxes every 15 seconds
+- Use new ActiveDrone index to recall only active drones, instead of all drones owened by you.
+- Fixed problem where ming laser crystal wouldn't be loaded if the laser had no crystal already.
+- Amadeus fixed DoGetAvailableAmmo in the extension, so crystal switching works now.
+- Removed extra "evebot" from the UI title.
 
 0.93 Revision 114
 - Fixed the obj_Ship.iss file in the function WarpToID that if it didn't make it to the destintion in the first warp it warps again.
