--- a/Trunk/EVEbot/changelog.txt
+++ b/Trunk/EVEbot/changelog.txt
@@ -39,6 +39,12 @@ Trunk
 - SVN: Tagged previous beta release as /tags/0.93
 - SVN: SVN work is in preparation for autopatching of release and development versions of EVEBot
 
+.95 rev 168
+ - Basic Combat Object Introduction
+   - Fail Safe Run [UI Combat Child]
+   - Drone Combat
+   - Combat Targeting
+   
 0.93 Revision 114
 - Fixed the obj_Ship.iss file in the function WarpToID that if it didn't make it to the destintion in the first warp it warps again.
 - Added to the oCore.iss to have the character's name as part of the log file name incase you have more then one bot going on the same computer for better logging.
