--- a/Trunk/EVEbot/changelog.txt
+++ b/Trunk/EVEbot/changelog.txt
@@ -52,6 +52,11 @@ Trunk
 - More work on the autopatcher
 - Removed duplication of timestamp for startup msgs
 - Fix problem with bot not performing actions, introduced in rev 168
+- More checks for cargo full so it responds faster
+- Typo in ui line had script end on abort condition
+- Consolidated Cargo full checks with bool Ship.CargoFull
+- Fixed drone shortage check and tested.
+- Removed missed UpdateHudStatus call
 
 0.93 Revision 114
 - Fixed the obj_Ship.iss file in the function WarpToID that if it didn't make it to the destintion in the first warp it warps again.
