--- a/Trunk/EVEbot/changelog.txt
+++ b/Trunk/EVEbot/changelog.txt
@@ -57,6 +57,10 @@ Trunk
 - Consolidated Cargo full checks with bool Ship.CargoFull
 - Fixed drone shortage check and tested.
 - Removed missed UpdateHudStatus call
+- Fixed race condtion in drone shortage check vs launching drones
+- Pre-warp check now deactivates all mining lasers and unlocks targets
+- (really) Fixed script end when miner hits ABORT state
+
 
 0.93 Revision 114
 - Fixed the obj_Ship.iss file in the function WarpToID that if it didn't make it to the destintion in the first warp it warps again.
