--- a/Trunk/EVEbot/changelog.txt
+++ b/Trunk/EVEbot/changelog.txt
@@ -51,6 +51,7 @@ Bug Fixes:
 - Added some missing safety checks to a few obj_Ship methods
 - Jetcan support: check distance on existing/known cans as well
 - Jetcan support: fix rename function
+- Fix missing declare in obj_Drones, probably the cause of peoples missed drone launches.
 
 Architecture Work:
 - A first pass at removing the bot logic from EVEBot.iss and pushing it into the bot classes.
@@ -96,6 +97,7 @@ Architecture Work:
 - added Cargo.TransferOreToJetcan
 - Added obj_Ship:CargoHalfFull
 - Updated UI element for Use JetCan
+- Separate obj_Ship and obj_Drones into separate files
 
 0.93 Revision 114
 - Fixed the obj_Ship.iss file in the function WarpToID that if it didn't make it to the destintion in the first warp it warps again.
