--- a/Trunk/EVEbot/Docs/changelog.txt
+++ b/Trunk/EVEbot/Docs/changelog.txt
@@ -1,6 +1,6 @@
  .______________________________________________________.
  |                   ___.           __                  |
- |   _______  __ ____\_ |__   _____/  |_                | 
+ |   _______  __ ____\_ |__   _____/  |_                |
  | _/ __ \  \/ // __ \| __ \ /  _ \   __\               |
  | \  ___/\   /\  ___/| \_\ (  <_> )  |                 |
  |  \___  >\_/  \___  >___  /\____/|__|                 |
@@ -15,8 +15,9 @@ randomized idle in belt (afk bio break)
 randomized full idle (safe/station - 30-60 minutes)
 
 *********************************************************
-                     CHANGELOG:                          
+                     CHANGELOG:
 *********************************************************
+Boy this file is old.
 
 Changes Currently in Trunk
 New Features:
@@ -38,7 +39,7 @@ New Features:
 - Shield boost will activate if always shield boost, hostiles nearby, or shield < 100%
 - Add slowboating check - if distance to roid is more than 3 * laser range, move belts.
 - Added ICE Mining support - check Ice Mining on the mining tab to seek ice belts.
-	Note that ice mining implicitly turns off multiple mining target selection, and turns off distribute lasers. This is by intentional and by design.  
+	Note that ice mining implicitly turns off multiple mining target selection, and turns off distribute lasers. This is by intentional and by design.
 	This was a fairly major change to a lot of systems, so if there are any problems with standard mining, speak up.
 
 
@@ -97,8 +98,8 @@ Architecture Work:
 - Refactored everything to use UI:UpdateConsole
 - Removed oCore.iss
 - UI: fixed up checkboxes to use checkbox instead of commandcheckbox, fixed overlay text
-- Added UI.CommandBuffer, to buffer log messages which occur before main() is called. Once main() is called, 
-  we call ui -reload, which properly populates all the elements with data from the Config.* objects.  The 
+- Added UI.CommandBuffer, to buffer log messages which occur before main() is called. Once main() is called,
+  we call ui -reload, which properly populates all the elements with data from the Config.* objects.  The
   commandbuffer is then replayed back to the statuswindow so we can see the log msgs from before the reload.
 - SVN: Moved /Tags/* to /tags/Historical/*
 - SVN: Tagged previous beta release as /tags/0.93
@@ -154,7 +155,7 @@ Architecture Work:
 - Tuned undock to remove entity check every frame, and use EVEWindow[Local]
 - Added blacklisting for empty asteroid belts.  Bot will not return to a belt that has been detected as empty
 	 If every asteroid belt in the system becomes blacklisted, bot will enter ABORT state, dock, and sit in IDLE state.
-- New routines: Asteroid.IsBeltEmpty, Asteroid:BeltIsEmpty, 
+- New routines: Asteroid.IsBeltEmpty, Asteroid:BeltIsEmpty,
 - Fixed bug where cargo wouldn't be detected if you docked with the cargo window open.
 - Fixed Missing quotes
 - Changed TransferOreToHangar to be more vigilant about being in the hangar.
@@ -273,7 +274,7 @@ Architecture Work:
 - No more pixel defining!!!
 
 
-0.84 
+0.84
 - Add a exists if for oStation (thanks to Cyber)
 - Only activate 2 shields (more was killing my capacity, feel free to change it back to the GetModule value)
 - Added a check if your stationloc == NULL
@@ -371,7 +372,7 @@ Architecture Work:
 - Added Dock and Undock Fix to stop d/cs
 
 
-0.61 
+0.61
 -Basic Revisions by Tehtsuo
 
 
