--- a/Trunk/EVEbot/Docs/changelog.txt
+++ b/Trunk/EVEbot/Docs/changelog.txt
@@ -17,7 +17,7 @@ randomized full idle (safe/station - 30-60 minutes)
 *********************************************************
                      CHANGELOG:
 *********************************************************
-Boy this file is old.
+Boy this file is old. really old.
 
 Changes Currently in Trunk
 New Features:
