--- a/Trunk/EVEbot/Testcases/TODO.txt
+++ b/Trunk/EVEbot/Testcases/TODO.txt
@@ -1,3 +1,5 @@
+Convert All existing scripts to use LSTypeIterator - Me and GetHangarItems done already
+
 .0
 .1 Items with a . in front are already completed
 .2
