--- a/Install/EVEBot/Testcases/TODO.txt
+++ b/Install/EVEBot/Testcases/TODO.txt
@@ -1,55 +1,46 @@
-Convert All existing scripts to use LSTypeIterator - Me and GetHangarItems done already
-
-.0
-.1 Items with a . in front are already completed
-.2
-.DoGetAgents[<index:being>]
-.DoGetAssets[<index:asset>,#]                                     [Retrieves all items that match the StationID# given]
-.DoGetAssets[<index:asset>]                                       [Retrieves all items that are in your assets window]
-.DoGetAvailableAmmo[<index:item>]
-.DoGetBookmarks[<index:bookmark>]
-.DoGetBuddies[<index:being>]
-.DoGetDrones[<index:item>]
-.DoGetEntities[<index:entity>]
-.DoGetFleet
-.DoGetFleet[<index:gangmember>]
-.DoGetPilots[<index:pilot>]
-.DoGetSkillQueue[index:queuedskill]
-DoGetActiveDroneIDs[<index:int>}
-DoGetActiveDrones[<index:activedrone>]
-DoGetAgentMissions[<index:agentmission>]
-DoGetCargo[<index:item>]
-DoGetChannelMessages[<index:string>,#]                        [Retrieve all channel messages since timestamp #]
-DoGetChannelMessages[<index:string>,CHANNELNAME,#]            [Retrieves all messages from the given channel since timestamp #]
-DoGetChannelMessages[<index:string>,CHANNELNAME]              [Retreives all messages from the given channel]
-DoGetChannelMessages[<index:string>]                          [Retrieve all channel messages]
-DoGetCorpHangarItems
-DoGetCorpHangarItems[<index:item>]
-DoGetDialogResponses[<index:dialogstring>]
-DoGetEntityIDs[<index:int>]
-DoGetHangarItems
-DoGetHangarItems[<index:item>]
-DoGetHangarShips
-DoGetHangarShips[<index:item>]
-DoGetMarketOrders[<index:marketorder>,"Buy",#]            {retrieves all buy orders currently cached by your client for the given TypeID#}
-DoGetMarketOrders[<index:marketorder>,"Buy"]              {retrieves all buy orders currently cached by your client}
-DoGetMarketOrders[<index:marketorder>,"Sell",#]           {retrieves all sell orders currently cached by your client for the given TypeID#}
-DoGetMarketOrders[<index:marketorder>,"Sell"]             {retrieves all sell orders currently cached by your client}
-DoGetMarketOrders[<index:marketorder>,#]                  {retrieves all buy/sell orders currently cached by your client for the given TypeID#}
-DoGetMarketOrders[<index:marketorder>]                    {retrieves all buy/sell orders currently cached by your client}
-DoGetModules[<index:module>]
-DoGetMyOrders[<index:myorder>,"Buy",#]            {retrieves all *buy* "My Orders" cached by your client for the given TypeID#}
-DoGetMyOrders[<index:myorder>,"Buy"]              {retrieves all *buy* "My Orders" cached by your client}
-DoGetMyOrders[<index:myorder>,"Sell",#]           {retrieves all *sell* "My Orders" cached by your client for the given TypeID#}
-DoGetMyOrders[<index:myorder>,"Sell"]             {retrieves all *sell* "My Orders" cached by your client}
-DoGetMyOrders[<index:myorder>,#]                  {retrieves all "My Orders" cached by your client for the given TypeID#}
-DoGetMyOrders[<index:myorder>]                    {retrieves all "My Orders" cached by your client}
-DoGetOnlineCorpMembers[<index:pilot>]
-DoGetServices[<index:string>]
-DoGetSkills[<index:skill>]
-DoGetStationsWithAssets[<index:int>]                             [Retrieves a list of StationID#s where you currently have assets.]
-DoGetTargetedBy[<index:entity>]
-DoGetTargeting[<index:entity>]
-DoGetTargets[<index:entity>]
-DoGetToDestinationPath[<index:int>]                 [the index is populated with the "SystemIDs" of the systems along your current destination (autopilot) route]
-DoGetWaypoints[<index:int>]                         [the index is populated with the "SystemIDs" of the waypoints in your current route]
+#0 Convert All existing scripts to use LSTypeIterator - Me and GetHangarItems done already
+#1
+#2
+#3 Items with a . in front are already completed
+#4
+.GetActiveDroneIDs[<index:int>}
+.GetActiveDrones[<index:activedrone>]
+.GetAgentMissions[<index:agentmission>]
+.GetAgents[<index:being>]
+.GetAssets[<index:asset>,#]                                     [Retrieves all items that match the StationID# given]
+.GetAssets[<index:asset>]                                       [Retrieves all items that are in your assets window]
+.GetAvailableAmmo[<index:item>]
+.GetBookmarks[<index:bookmark>]
+.GetBuddies[<index:being>]
+.GetCorpHangarItems[<index:item>]
+.GetDrones[<index:item>]
+.GetEntities[<index:entity>]
+.GetFleet[<index:gangmember>]
+.GetHangarItems[<index:item>]
+.GetHangarShips[<index:item>]
+.GetModules[<index:module>]
+.GetPilots[<index:pilot>]
+.GetSkillQueue[index:queuedskill]
+.GetStationsWithAssets[<index:int>]                             [Retrieves a list of StationID#s where you currently have assets.]
+.GetTargetedBy[<index:entity>]
+.GetTargeting[<index:entity>]
+.GetTargets[<index:entity>]
+GetCargo[<index:item>]
+GetDialogResponses[<index:dialogstring>]
+GetMarketOrders[<index:marketorder>,"Buy",#]            {retrieves all buy orders currently cached by your client for the given TypeID#}
+GetMarketOrders[<index:marketorder>,"Buy"]              {retrieves all buy orders currently cached by your client}
+GetMarketOrders[<index:marketorder>,"Sell",#]           {retrieves all sell orders currently cached by your client for the given TypeID#}
+GetMarketOrders[<index:marketorder>,"Sell"]             {retrieves all sell orders currently cached by your client}
+GetMarketOrders[<index:marketorder>,#]                  {retrieves all buy/sell orders currently cached by your client for the given TypeID#}
+GetMarketOrders[<index:marketorder>]                    {retrieves all buy/sell orders currently cached by your client}
+GetMyOrders[<index:myorder>,"Buy",#]            {retrieves all *buy* "My Orders" cached by your client for the given TypeID#}
+GetMyOrders[<index:myorder>,"Buy"]              {retrieves all *buy* "My Orders" cached by your client}
+GetMyOrders[<index:myorder>,"Sell",#]           {retrieves all *sell* "My Orders" cached by your client for the given TypeID#}
+GetMyOrders[<index:myorder>,"Sell"]             {retrieves all *sell* "My Orders" cached by your client}
+GetMyOrders[<index:myorder>,#]                  {retrieves all "My Orders" cached by your client for the given TypeID#}
+GetMyOrders[<index:myorder>]                    {retrieves all "My Orders" cached by your client}
+GetOnlineCorpMembers[<index:pilot>]
+GetServices[<index:string>]
+GetSkills[<index:skill>]
+GetToDestinationPath[<index:int>]                 [the index is populated with the "SystemIDs" of the systems along your current destination (autopilot) route]
+GetWaypoints[<index:int>]                         [the index is populated with the "SystemIDs" of the waypoints in your current route]
